--- a/app/src/main/res/layout/activity_aggiungi.xml
+++ b/app/src/main/res/layout/activity_aggiungi.xml
@@ -15,6 +15,7 @@
         android:text="nuova serra"
         android:textAlignment="center"
         android:textAllCaps="true"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -167,7 +168,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:ems="10"
-                android:inputType="numberSigned"
+                android:inputType="numberDecimal"
+                android:text="1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
@@ -186,7 +188,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:ems="10"
-                android:inputType="numberSigned"
+                android:inputType="numberDecimal"
+                android:text="1"
                 app:layout_constraintBottom_toTopOf="@+id/editText4"
                 app:layout_constraintStart_toStartOf="@+id/textView9" />
 
@@ -205,7 +208,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
                 android:ems="10"
-                android:inputType="numberSigned"
+                android:inputType="numberDecimal"
+                android:text="1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/editText7"
                 app:layout_constraintStart_toStartOf="@+id/editText7" />
@@ -222,6 +226,13 @@
 
 
     </ScrollView>
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="76dp"
+        android:layout_height="32dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp" />
 
 
 </android.support.constraint.ConstraintLayout>
