--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -259,7 +259,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:inputType="none"
-                    android:text="Litri in entrata:"
+                    android:text="coefficiente entrata:"
                     android:textAlignment="viewStart"
                     android:textSize="12sp"
                     android:textStyle="italic"
@@ -306,7 +306,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:inputType="none"
-                    android:text="Litri in uscita:"
+                    android:text="coefficiente uscita:"
                     android:textAlignment="viewStart"
                     android:textSize="12sp"
                     android:textStyle="italic"
