--- a/app/src/main/res/menu/example_menu.xml
+++ b/app/src/main/res/menu/example_menu.xml
@@ -3,8 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/item2"
+        android:title="Aggiungi serra"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/item1"
-        android:title="Item 1"
+        android:title="Seleziona periodo"
         app:showAsAction="never" />
 
 </menu>
