--- a/app/src/main/res/layout/activity_addrilevamento.xml
+++ b/app/src/main/res/layout/activity_addrilevamento.xml
@@ -29,9 +29,8 @@
 
             <TextView
                 android:id="@+id/textView11"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="nuovo rilevamento"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
@@ -39,7 +38,6 @@
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="24sp"
                 android:textStyle="bold"/>
 
             <TextView
