--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -41,26 +41,10 @@
             app:layout_constraintVertical_bias="1.0"
             app:menu="@menu/bottom_nav_menu" />
 
-        <Button
-            android:id="@+id/button_home"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:icon="@drawable/ic_action_home"
-            android:text="H"
-            android:title="@string/button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
 
         <TextView
             android:id="@+id/info_nome"
-            android:layout_width="116dp"
+            android:layout_width="wrap_content"
             android:layout_height="34dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
@@ -73,7 +57,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/button_home"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.018" />
 
