--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -41,6 +41,7 @@
             app:layout_constraintVertical_bias="1.0"
             app:menu="@menu/bottom_nav_menu" />
 
+
         <Button
             android:id="@+id/button_home"
             android:layout_width="60dp"
@@ -56,7 +57,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
-
 
         <TextView
             android:id="@+id/info_nome"
@@ -86,11 +86,11 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info_nome"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
             app:layout_constraintVertical_bias="0.0">
 
             <LinearLayout
@@ -425,13 +425,17 @@
                     android:inputType="none"
                     android:text="@string/_00_00_00"
                     android:textAlignment="center"
-                    app:layout_constraintBottom_toBottomOf="@+id/scroller"
+                    app:layout_constraintBottom_toBottomOf="@+id/button_elimina"
                     app:layout_constraintEnd_toEndOf="parent"
-
                     app:layout_constraintHorizontal_bias="0.503"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/info_varieta"
                     app:layout_constraintVertical_bias="0.0" />
+
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
 
 
             </LinearLayout>
